crates/cli/src/commands/snapshots/skillfile__commands__search_tui__tests__render_with_failed_audits.snap
---
source: crates/cli/src/commands/search_tui.rs
expression: buffer_text(terminal.backend().buffer())
---
 type to filter, Enter to select, Esc to cancel   3/3
┌ Results ─────────────────────┐┌ Preview ─────────────────────────────────────┐
│  code-reviewer  ★150  🛡 92  a││docker-helper                                 │
│> docker-helper  ★500  skills.││                                              │
│  testing-pro  ★75  🛡 88  skil││Registry:       skills.sh                     │
│                              ││Owner:          dockerfan                     │
│                              ││Stars:          500                           │
│                              ││Source:         dockerfan/docker-helper       │
│                              ││URL:                                          │
│                              ││https://skills.sh/dockerfan/docker-helper/dock│
│                              ││er-helper                                     │
│                              ││Audits:         fetch failed                  │
│                              ││                                              │
│                              ││No description available.                     │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
└──────────────────────────────┘└──────────────────────────────────────────────┘
